# admin-vue3/src/api/dashboard.js
@@ -1,0 +1,22 @@
+import request from '@/utils/request'
+
+export function getStatistics() {
+  return request({
+    url: '/dashboard/statistics',
+    method: 'get'
+  })
+}
+
+export function getRecentLogs() {
+  return request({
+    url: '/dashboard/recentLogs',
+    method: 'get'
+  })
+}
+
+export function getTodoList() {
+  return request({
+    url: '/dashboard/todoList',
+    method: 'get'
+  })
+}
